JBJPA-10: upgraded to deployers 2.2.0 and fixed exploded jar deployment